# speakleash

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
speakleash/: Speakleash.py  SpeakleashDataset.py  __init__.py  config.json  config_2.json  config_loader.py  contrib.py
speakleash/category_manager/: __init__.py  category_manager.py
speakleash/core/: __init__.py  core.py
speakleash/dataset/: __init__.py  dataset.py
speakleash/downloader/: __init__.py  structure_downloader.py
