[metadata]
name = speakleash
version = 0.0.5
author = SpeakLeash Team
author_email = team@speakleash.org
description = SpeakLeash agnostic dataset for Polish
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/speakleash/speakleash
project_urls =
    Bug Tracker = https://github.com/speakleash/speakleash/issues
    repository = https://github.com/speakleash/speakleash
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = speakleash
packages = find:
python_requires = >=3.6

[options.packages.find]
where = speakleash